removed right margin from hero icons to fix the horizontal scroll for mobile

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -130,14 +130,10 @@ a.link:hover {
   height: 100vh;
   width: 100%;
   z-index: 200;
-  
   background-repeat: no-repeat;
   background-position: left top;
-  // background-color: red;
   position: absolute;
   overflow-x: hidden;
-
-  right: -75px;
 
   @include tablet {
     right: -300px;
